# auto_gippity

./: Cargo.toml
src/: main.rs
src/ai_functions/: mod.rs
src/apis/: call_request.rs
src/helpers/: general.rs
