[package]
name = "auto_gippity"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
crossterm = "0.28.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
webbrowser = "1.0.1"
ai_functions="0.1.1"